--- a/parchi.html
+++ b/parchi.html
@@ -24,12 +24,12 @@
         </nav>
     </header>
     <main>
-        <div class="contenitore1parchi">
+        <div class="contenitore">
             <img src="IMG/imgparcoabruzzo.png" alt="immagine descrittiva">
-            <div class="testo-overlay1">
+            <div class="testo-overlay">
                 <h4>Parchi</h4>
                 <h5>Esplora i maestosi parchi nazionali italiani: luoghi incantati dove montagne, coste e antiche foreste raccontano la storia e la bellezza senza tempo del nostro Paese.</h5>
-                <p>i 12 parchi nazionali italiani, un mosaico di montagne, mari e foreste di inestimabile valore. Ogni area protetta racconta storie di biodiversità, paesaggi unici e tradizioni centenarie da vivere e rispettare. Avventure e meraviglie attendono.</p>
+                <p class="p1">i 12 parchi nazionali italiani, un mosaico di montagne, mari e foreste di inestimabile valore. Ogni area protetta racconta storie di biodiversità, paesaggi unici e tradizioni centenarie da vivere e rispettare. Avventure e meraviglie attendono.</p1>
             </div>
         </div>
        
@@ -49,104 +49,87 @@
 
                 <div class="items">
                     <a href="parcodellarcipelagotoscano.html"><img src="IMG/imgarcipelagotoscano2cardparchi.png" alt=""></a>
-                    <nav>
                         <div class="text6">
                             <h6><a href="parcodellarcipelagotoscano.html">Parco dell'Arcipelago Toscano</a></h6>
                         </div>
-                    </nav>
+
                 </div>
 
                     <div class="items">
                         <a href="parcodelletna.html"><img src="IMG/imgetna1cardparchi.png" alt=""></a>
-                        <nav>
                             <div class="text6">
                                 <h6><a href="parcodelletna.html">Parco dell'Etna</a></h6>
                             </div>
-                        </nav>
                     </div>
 
                     <div class="items">
                         <a href="parcodellasila.html"><img src="IMG/imgsila1cardparchi.png" alt=""></a>
-                        <nav>
                             <div class="text6">
                                 <h6><a href="parcodellasila.html">Parco della Sila</a></h>
                             </div>
-                        </nav>
 
 
                     </div>
                     <div class="items">
                        <a href=""> <img src="IMG/imgparconazionalegranparadisocardparchi.png" alt=""></a> 
-                        <nav>
                             <div class="text6">
                                 <h6><a href="">Parco del Gran Paradiso</a></h6>
                         </div>
-                        </nav>
                     </div>
 
                 <div class="items">
                     <a href=""><img src="IMG/imgparconazionaledellecinqueterrecardparchi.png" alt=""></a>
-                    <nav>
                         <div class="text6">
                             <h6><a href="">Parco delle cinque terre</a></h6>
                         </div>
-                    </nav>
                 </div>
 
                     <div class="items">
                        <a href=""><img src="IMG/imgparconazionaledelpollinocardparchi.png" alt=""></a>
-                        <nav>
                             <div class="text6">
                                 <h6><a href="">Parco del Pollino</a></h6>
                             </div>
-                        </nav>
                     </div>
 
                     <div class="items">
                         <a href=""><img src="IMG/imgparconazionaledelledolomitibellunesicardparchi.png"></a>
-                        <nav>
                             <div class="text6">
                                 <h6><a href="">Parco delle Dolomiti Bellunesi</a></h>
                             </div>
-                        </nav>
+
 
                     </div>
 
 
                     <div class="items">
                         <a href=""><img src="IMG/imgparcodellarcipelagolamaddalenacardparchi.png" alt=""></a>
-                        <nav>
                             <div class="text6">
                                 <h6><a href="">Parco Arcipelago La Maddalena</a></h6>
                         </div>
-                        </nav>
                     </div>
 
                 <div class="items">
                     <a href=""><img src="IMG/imgparconazionaledelcilentocardparchi.png" alt=""></a>
-                    <nav>
+
                         <div class="text6">
                             <h6><a href="">Parco del Cilento</a></h6>
                         </div>
-                    </nav>
                 </div>
 
                     <div class="items">
                         <a href=""><img src="IMG/imgparcodelleforestecasentinesicardparchi.png" alt=""></a>
-                        <nav>
+
                             <div class="text6">
                                 <h6><a href="">Parco delle foreste Casentinesi</a></h6>
                             </div>
-                        </nav>
                     </div>
 
                     <div class="items">
                         <a href=""><img src="IMG/imgparcoabruzzocardparchi.png" alt=""></a>
-                        <nav>
+
                             <div class="text6">
                                 <h6><a href="">Parco dell'Abruzzo</a></h6>
                             </div>
-                        </nav>
 
                     </div>
             </div>
