--- a/attivitàedesperienze.html
+++ b/attivitàedesperienze.html
@@ -24,9 +24,9 @@
         </nav>
     </header>
     <main>
-        <div class="contenitore2attivitàedesperienze">
+        <div class="contenitore">
             <img src="IMG/imgattivitàedesperienze.png" alt="immagine descrittiva">
-            <div class="testo-overlay2">
+            <div class="testo-overlay">
                 <h1>Attività ed esperienze</h1>
                 <p>I parchi naturali italiani sono un tesoro di ecosistemi ricchi, paesaggi mozzafiato e unici legami tra uomo e ambiente. Scopri flora, fauna e le storie che rendono speciale ogni angolo protetto del nostro Paese.</p>
             </div>
@@ -37,49 +37,39 @@
             <div class="grid2">
                     <div class="items">
                         <a href="trekkingeescursioni.html"><img src="IMG/imgtrekkingcardattivitàedesperienze.png" alt=""></a>
-                        <nav>
-                            <div class="text18">
+                            <div class="text7">
                                 <h7><a href="trekkingeescursioni.html">Escursioni e trekking</a></h7>
                             </div>
-                        </nav>
                     </div>
                 
                
 
                 <div class="items">
                     <a href="attivitàdidattiche.html"><img src="IMG/attivitàdidattiche1attivitàedesperienze.png" alt=""></a>
-                    <nav>
-                        <div class="text18">
+                        <div class="text7">
                             <h7><a href="attivitàdidattiche.html">Attività didattiche</a></h7>
                         </div>
-                    </nav>
                 </div>
 
                     <div class="items">
                        <a href="sitiarcheologicieborghistorici.html"> <img src="IMG/imgsitoarcheologicocardattivitàedesperienze.png" alt=""></a> 
-                        <nav>
-                            <div class="text18">
+                            <div class="text7">
                                 <h7><a href="sitiarcheologicieborghistorici.html"sitiarcheologicieborghistorici.html">Siti archeologici e borghi storici</a></h7>
                             </div>
-                        </nav>
                     </div>
 
                     <div class="items">
                         <a href="sportallariaaperta.html"><img src="IMG/mountainbikeattivitàedesperienze.png" alt=""></a>
-                        <nav>
-                            <div class="text18">
+                            <div class="text7">
                                 <h7><a href="sportallariaaperta.html">Sport all'aria aperta</a></h7>
                             </div>
-                        </nav>
 
                     </div>
                     <div class="items">
                         <a href="birdwatching.html"><img src="IMG/birdwatchingattivitàedesperienze.jpg" alt=""></a>
-                        <nav>
-                            <div class="text18">
+                            <div class="text7">
                                 <h7><a href="birdwatching.html">Birdwatching</a></h7>
                             </div>
-                        </nav>
 
                     </div>
             </div>
