--- a/birdwatching.html
+++ b/birdwatching.html
@@ -24,9 +24,9 @@
         </nav>
     </header>
     <main>
-        <div class="contenitore11">
+        <div class="contenitore">
             <img src="IMG/birdwatching.png" alt="immagine descrittiva">
-            <div class="testo-overlay11">
+            <div class="testo-overlay">
                 <h1>Birdwatching</h1>
                 <p>Molti parchi dispongono di punti panoramici particolarmente indicati per il birdwatching, dove, con l’ausilio di capanni o torri d’avvistamento, si possono osservare specie migratorie e rapaci di grande fascino.</p>
             </div>
@@ -44,40 +44,31 @@
 
                 <div class="items">
                     <a href="parcodellarcipelagotoscano.html"><img src="IMG/imgarcipelagotoscano2cardparchi.png" alt=""></a>
-                    <nav>
                         <div class="text6">
                             <h6><a href="parcodellarcipelagotoscano.html">Parco dell'Arcipelago Toscano</a></h6>
                         </div>
-                    </nav>
                 </div>
 
 
                 <div class="items">
                     <a href=""><img src="IMG/imgparconazionaledelcilentocardparchi.png" alt=""></a>
-                    <nav>
                         <div class="text6">
                             <h6><a href="">Parco del Cilento</a></h6>
                         </div>
-                    </nav>
                 </div>
 
                     <div class="items">
                         <a href=""><img src="IMG/imgparcodelleforestecasentinesicardparchi.png" alt=""></a>
-                        <nav>
                             <div class="text6">
                                 <h6><a href="">Parco delle foreste Casentinesi</a></h6>
                             </div>
-                        </nav>
                     </div>
 
                     <div class="items">
                         <a href=""><img src="IMG/imgparcoabruzzocardparchi.png" alt=""></a>
-                        <nav>
                             <div class="text6">
                                 <h6><a href="">Parco dell'Abruzzo</a></h6>
                             </div>
-                        </nav>
-
                     </div>
             </div>
         </section>     
