--- a/sitiarcheologicieborghistorici.html
+++ b/sitiarcheologicieborghistorici.html
@@ -24,9 +24,9 @@
         </nav>
     </header>
     <main>
-        <div class="contenitore9">
+        <div class="contenitore">
             <img src="IMG/sitiarcheologicieborghistorici.png" alt="immagine descrittiva">
-            <div class="testo-overlay9">
+            <div class="testo-overlay1">
                 <h1>Siti archeologici e borghi storici</h1>
                 <p>Anche la dimensione culturale e gastronomica è fondamentale. Molti parchi ospitano eventi e manifestazioni dedicati a prodotti tipici (vino, formaggi, miele, olio) e antiche tradizioni. Infine, per un’immersione completa, alcuni itinerari integrano la visita a siti archeologici o borghi storici, testimoniando l’equilibrio millenario tra l’uomo e l’ambiente. In questo modo, chi sceglie di esplorare i parchi nazionali italiani può trovare esperienze su misura, imparare a conoscere e rispettare la natura, nonché scoprire la ricchezza culturale dei territori protetti.</p>
             </div>
@@ -55,20 +55,16 @@
 
                 <div class="items">
                     <a href="parcodellarcipelagotoscano.html"><img src="IMG/imgarcipelagotoscano2cardparchi.png" alt=""></a>
-                    <nav>
                         <div class="text6">
                             <h6><a href="parcodellarcipelagotoscano.html">Parco dell'Arcipelago Toscano</a></h6>
                         </div>
-                    </nav>
                 </div>
 
                     <div class="items">
                         <a href="parcodelletna.html"><img src="IMG/imgetna1cardparchi.png" alt=""></a>
-                        <nav>
                             <div class="text6">
                                 <h6><a href="parcodelletna.html">Parco dell'Etna</a></h6>
                             </div>
-                        </nav>
                     </div>
 
 
@@ -76,11 +72,9 @@
 
                 <div class="items">
                     <a href=""><img src="IMG/imgparconazionaledelcilentocardparchi.png" alt=""></a>
-                    <nav>
                         <div class="text6">
                             <h6><a href="">Parco del Cilento</a></h6>
                         </div>
-                    </nav>
                 </div>
 
 
